[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/CursorTile/CursorPoint.gd" type="Script" id=1]

[sub_resource type="SpatialMaterial" id=1]
flags_transparent = true
albedo_color = Color( 0.105882, 0.917647, 0.878431, 0.666667 )

[sub_resource type="CubeMesh" id=2]
size = Vector3( 1, 1, 1 )

[sub_resource type="Animation" id=3]
resource_name = "click"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("MeshInstance:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0.9, 0.9, 0.9 ), Vector3( 0.9, 0, 0.9 ), Vector3( 0.9, 0.9, 0.9 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MeshInstance:translation:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.5, 0.0, 0.5 ]
}

[node name="CursorPoint" type="Spatial"]
script = ExtResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 0.9, 0, 0, 0, 0.9, 0, 0, 0, 0.9, 0, 0.5, 0 )
visible = false
material_override = SubResource( 1 )
mesh = SubResource( 2 )
material/0 = null

[node name="TimerClick" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/click = SubResource( 3 )
[connection signal="timeout" from="TimerClick" to="." method="_on_TimerClick_timeout"]
